test/good/binary_delay_lho.ept
node f(x :int) returns (cpt, y :int)
let
  y = x + 1;
  cpt = (0 fby cpt) + 1;
tel

node g(x :int; c :bool) returns (out :int)
var t, cpt, y, last_y :int;
let
  (cpt, y) = f(t);
  t = merge c x (last_y whenot c);
  last_y = 0 fby y;
  out = y whenot c;
tel

node main() returns (out :int; c :bool) var x :int;
let
  x = 0 fby (x+10);
  c = true fby false fby c;
  out = g(x,c);
tel
