test/bad/bad_static_exp_sampler.ept
node main(x:int{<3}) = (y:bool)
let
  y = merge x (0 -> true) (1 -> false);
tel
